tests/base/invalid/NegationType_Invalid_1.whiley
!null f(any x):
    return x


